force-app/main/default/objects/Account/fields/Github_demo__c.field-meta.xml
<CustomField>
    <fullName>Github_demo__c</fullName>
    <label>Github demo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>