force-app/main/default/objects/Account/fields/Github_test_1__c.field-meta.xml
<CustomField>
    <fullName>Github_test_1__c</fullName>
    <label>Github test 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>