force-app/main/default/objects/Account/fields/Repo_Test__c.field-meta.xml
<CustomField>
    <fullName>Repo_Test__c</fullName>
    <label>Repo Test</label>
    <length>255</length>
    <type>Text</type>
</CustomField>